This is a language commit. I've gone through most of the templates and based on user feedback I've made the following changes:
Borrower, Member => Patron
Debarred => Restricted
Issues => Checkouts
Reserves => Holds

--- a/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/admin/admin-home.tmpl
@@ -37,28 +37,28 @@
 </tr>
 
 <tr>
-<th colspan="2">Borrowers and circulation</th>
+<th colspan="2">Patrons and circulation</th>
 </tr>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/categorie.pl">Borrower categories</a></td>
-	<td>Define borrower categories.</td>
+	<td><a href="/cgi-bin/koha/admin/categorie.pl">Patron categories</a></td>
+	<td>Define patron categories.</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/cities.pl">Cities and towns</a></td>
-	<td>Define cities and towns that your borrowers live in.</td>
+	<td>Define cities and towns that your patrons live in.</td>
 </tr>	
 <tr>
 	<td><a href="/cgi-bin/koha/admin/roadtype.pl" >Road types</a>
 	</td>
-	<td>Define road types. Fill this table to get a list of road types when adding/editing borrowers (can be used in Geographic statistics).</td>
+	<td>Define road types. Fill this table to get a list of road types when adding/editing patrons (can be used in Geographic statistics).</td>
 </tr>
 <tr>
-	<td><a href="/cgi-bin/koha/admin/issuingrules.pl">Issuing rules</a></td>
-	<td>Define issuing rules in a matrix for branches / borrowers / item types (number of issues, duration, cost...).</td>
+	<td><a href="/cgi-bin/koha/admin/issuingrules.pl">Circulation rules</a></td>
+	<td>Define circulation rules in a matrix for libraries / patrons / itemtypes (number of checkouts, duration, cost...).</td>
 </tr>
 <tr>
 	<td><a href="/cgi-bin/koha/admin/finesrules.pl">Fines rules</a></td>
-	<td>Define fines in a matrix for branches / borrowers / item types (cost, grace period...).</td>
+	<td>Define fines in a matrix for libraries / patrons / itemtypes (cost, grace period...).</td>
 </tr>
 <tr>
 <th colspan="2">Catalogue</th>
