--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
@@ -4,7 +4,7 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
-<h1>Circulation: Branch Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></h1>
+<h1>Circulation: Library Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></h1>
 
 <div id="mainbloc">
 <!-- selector of location -->
@@ -37,8 +37,8 @@
         <tr>
             <th>Date_due</th>
             <th>Title</th>
-            <th>Borrower</th>
-            <th>Location</th>
+            <th>Patron</th>
+            <th>Library</th>
             <th>Overdue status</th>
             <th>Notify by</th>
         </tr>
