--- a/koha-tmpl/intranet-tmpl/prog/en/circ/stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/stats.tmpl
@@ -5,7 +5,7 @@
 <!-- TMPL_INCLUDE NAME="menu-circ.inc"-->
 
     <!-- TMPL_IF NAME="notime" -->
-        <h1>Display stats for</h1>
+        <h1>Display statistics for:</h1>
         <ul>
             <li><a href="/cgi-bin/koha/circ/stats.pl?time=yesterday">yesterday</a></li>
             <li><a href="/cgi-bin/koha/circ/stats.pl?time=today">today</a></li>
@@ -18,7 +18,7 @@
     			<th>Type</th>
     			<th>Date/time</th>
     			<th>Amount</th>
-    			<th>Branch</th>
+    			<th>Library</th>
     		<tr>
     		<!-- TMPL_LOOP name="loop1" -->
     		<tr>
