--- a/koha-tmpl/intranet-tmpl/prog/en/circ/transferstoreceive.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/transferstoreceive.tmpl
@@ -7,7 +7,7 @@
 <div id="mainbloc">
 	<h1 class="circulation">Transfers made TO your library on : <!-- TMPL_VAR NAME="show_date" --></h1>
 	<!-- TMPL_IF name="branchesloop" -->
-            <p>You are the destination of the following transfer(s)</p>
+            <p>Your library is the destination for the following transfer(s)</p>
             <div id="resultlist">
             <!-- TMPL_LOOP NAME="branchesloop" -->
                 <!-- TMPL_IF NAME="branchcode" -->
