--- a/koha-tmpl/intranet-tmpl/prog/en/export/marc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/export/marc.tmpl
@@ -1,6 +1,6 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->Koha -- Cataloging: MARC Export<!-- TMPL_INCLUDE NAME="doc-head-close-addbiblio.inc" -->
 
-<h1>MARC Export</h1>
+<h1>MARC Export Utility</h1>
 <h4>Export in MARC format the following biblios:</h4>
 <form method="post">
 <p>From biblio number: <input type="text" name="StartingBiblionumber" />
@@ -9,6 +9,4 @@ to biblio number: <input type="text" name="EndingBiblionumber" /></p>
 <input type="hidden" name="op" value="export" />
 <input type="submit" value="Export" />
 </form>
-<p>Note : the items are NOT exported by this tool</p>
-
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
