--- a/koha-tmpl/intranet-tmpl/prog/en/members/borrowers_details.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/borrowers_details.tmpl
@@ -1,8 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Borrower Details</title>
+<title>Patron Details</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <div id="mainbloc">
-	<h1>BORROWER DETAILS</h1>
+	<h1>PATRON DETAILS</h1>
 	
 	<form name="form" method="post" action="/cgi-bin/members/borrowers_details.pl">
 	<div >
@@ -10,34 +10,34 @@
 		
 		<p>
 		
-			<label>borrower categorie</label>		
+			<label>Patron category</label>		
 			<input  type="text" name="description" size="20"  value="<!-- TMPL_VAR NAME="description" -->" >
 		</p>
 		<p>
 			
-			<label>organisation name</label>
+			<label>Organisation name</label>
 			<input  style="text-transform:uppercase;" type="text" name="surname" size="20"  value="<!-- TMPL_VAR NAME="surname" -->" >
 		</p>
 		
 	<!-- TMPL_ELSE -->	
 
 		<p>
-			<label>borrower categorie</label>
+			<label>Patron category</label>
 			<input  type="text" name="description" size="20"  value="<!-- TMPL_VAR NAME="description" -->" >
 			</p>
 		<p>
-			<label>title</label>
+			<label>Title</label>
 			<input  type="text" name="title" size="20"  value="<!-- TMPL_VAR NAME="title" -->" >
 			
 		</p>
 		<p>
-			<label>surname</label>
+			<label>Surname</label>
 			<input  style="text-transform:uppercase;" type="text" name="surname" size="20"  value="<!-- TMPL_VAR NAME="surname" -->" >
 		</p>
 			
 		<p>	
 			
-			<label>firstname</label>
+			<label>Firstname</label>
 			<input  style="text-transform:capitalize;" type="text" name="firstname" size="20"  value="<!-- TMPL_VAR NAME="firstname" -->">
 		</p>
 		<p>
