--- a/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/memberentryA.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Adult Borrower Management</title>
+<title>Koha &rsaquo; Adult Patron Management</title>
 <script type="text/javascript" src="<!-- TMPL_VAR NAME='themelang' -->/includes/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
@@ -8,11 +8,11 @@
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 	<!-- TMPL_IF NAME="opadd" -->
 	<h1>
-		Add adult borrower (step <!-- TMPL_VAR NAME="step" -->) <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
+		Add adult patron (step <!-- TMPL_VAR NAME="step" -->) <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
 	</h1>
 	<!-- TMPL_ELSE -->
 	<h1 >
-		Modify adult borrower <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
+		Modify adult patron <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" -->
 	</h1>
 	<!-- /TMPL_IF -->
 	<!-- TMPL_IF NAME="check_member" -->
@@ -44,7 +44,7 @@
 				<p>login/password already exist</p>
 			<!-- /TMPL_IF -->
                         <!-- TMPL_IF NAME="ERROR_age_limitations" -->
-                                Borrower is too young or too old for this category
+                                Patron is too young or too old for this category
                         <!-- /TMPL_IF -->
 		</div>
 	<!-- /TMPL_IF -->
@@ -104,7 +104,7 @@
 		<input type="hidden" name="op" value="modify">
 	<!-- /TMPL_IF -->
 	<fieldset id="memberentry_identity">
-		<legend>Borrower identity</legend>
+		<legend>Patron identity</legend>
 		<p>
 		<!-- TMPL_IF NAME="female" -->
 		<input type="radio" name="sex" value="F" checked>Female
@@ -192,7 +192,7 @@
 		</p>
 	</fieldset>
 	<fieldset id="memberentry_identity">
-		<legend>Borrower type</legend>
+		<legend>Patron type</legend>
 		<p>
 		<!-- TMPL_IF NAME="catcodepopup" -->
 			    <label>Category</label>
