--- a/koha-tmpl/intranet-tmpl/prog/en/reports/issues_by_borrower_category.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/issues_by_borrower_category.tmpl
@@ -12,7 +12,7 @@
 
 <!-- TMPL_IF NAME="do_it" -->
 <!-- TMPL_LOOP NAME="mainloop" -->
-	<h1>Issues by borrower category <!--TMPL_IF NAME="borrower_category" --> for category = <!-- TMPL_VAR NAME="borrower_category" --><!-- /TMPL_IF --></h1>
+	<h1>Checkouts by patron category <!--TMPL_IF NAME="borrower_category" --> for category = <!-- TMPL_VAR NAME="borrower_category" --><!-- /TMPL_IF --></h1>
 	<table>
 		<tr>
 			<th>&nbsp;</th>
@@ -47,7 +47,7 @@
 	</table>
 <!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
-	<h1>Issues by borrower category</h1>
+	<h1>Checkouts by patron category</h1>
 	<form method="post">
 		<p>Select a borrower category (or don't if you want to see global status) <input type="text" name="value" /></p>
 		<p>Select a branch : <!-- TMPL_VAR NAME="CGIbranch" --></p>
