--- a/koha-tmpl/intranet-tmpl/prog/en/reports/reservereport.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/reservereport.tmpl
@@ -1,9 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Reserve Report &rsaquo; All Reserves</title>
+<title>Koha &rsaquo; Hold Report &rsaquo; All Holds</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <table>
-	<tr><th>Name</th><th>Reserve Date</th><th>Title</th><th>Class</th></tr>
+	<tr><th>Name</th><th>Hold Date</th><th>Title</th><th>Class</th></tr>
 	<!-- TMPL_LOOP Name="dataloop" -->
 		<tr>
 			<td>
