--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/advsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/advsearch.tmpl
@@ -418,7 +418,7 @@
 <!-- AVAILABILITY LIMITS -->
     <fieldset><legend>Location and availability: </legend>
         <p>
-        <label>Branch</label><select name="limit" id="branchloop">
+        <label>Library</label><select name="limit" id="branchloop">
         <!-- TMPL_LOOP NAME="branchloop" -->
         <option value="<!-- TMPL_VAR NAME='value' -->"><!-- TMPL_VAR NAME='branchname' --></option>
         <!-- /TMPL_LOOP -->
