--- a/koha-tmpl/intranet-tmpl/prog/en/cataloguing/additem-nomarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/cataloguing/additem-nomarc.tmpl
@@ -33,7 +33,7 @@ Sorry, that barcode is already in use<!-- /TMPL_IF -->
 
 <!-- TMPL_LOOP NAME="ITEMS -->
 <tr><th scope="row">Item:</th><td><!-- TMPL_VAR NAME="barcode" --></td></tr>
-<tr><th scope="row">Home Branch:</th><td><!-- TMPL_VAR NAME="homebranch" --></td></tr>
+<tr><th scope="row">Home Library:</th><td><!-- TMPL_VAR NAME="homebranch" --></td></tr>
 <tr><th scope="row">Notes:</th><td><!-- TMPL_VAR NAME="itemnotes" --></td></tr>
 <!-- /TMPL_LOOP -->
 
@@ -47,7 +47,7 @@ Sorry, that barcode is already in use<!-- /TMPL_IF -->
 <caption>Add New Item</caption>
 <tr><th scope="row"><label for="barcode">Item Barcode:</label></th><td><input type="text" id="barcode" name="barcode" size="40" /></td>
 </tr>
-<tr><th scope="row"><label for="homebranch">Branch:</label></th><td><select name="homebranch" id="branch">
+<tr><th scope="row"><label for="homebranch">Library:</label></th><td><select name="homebranch" id="branch">
 <!-- TMPL_LOOP NAME="BRANCHES" -->
 <option value="<!-- TMPL_VAR NAME="branchcode" -->"><!-- TMPL_VAR NAME="branchname" --></option>
 <!-- /TMPL_LOOP -->
