--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchtransfers.tmpl
@@ -91,7 +91,7 @@
                         Reserve Cancelled<br>
                     <!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="setwaiting" -->
-                        Item should now be waiting at branch: <!-- TMPL_VAR Name="reqbrchname" --><br>
+                        Item should now be waiting at library: <!-- TMPL_VAR Name="reqbrchname" --><br>
                     <!-- /TMPL_IF -->
                 <!-- /TMPL_IF -->
                 <!-- TMPL_LOOP Name="errmsgloop" -->
@@ -99,10 +99,10 @@
                         No Item with barcode: <!-- TMPL_VAR Name="msg" -->
                     <!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="errispermanent" -->
-                            Please return item to home branch: <!-- TMPL_VAR Name="msg" -->
+                            Please return item to home library: <!-- TMPL_VAR Name="msg" -->
                     <!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="errdesteqholding" -->
-                        Item is already at destination branch.
+                        Item is already at destination library.
                     <!-- /TMPL_IF -->
                     <!-- TMPL_IF Name="errwasreturned" -->
                         Item was on loan to <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR Name="borrowernumber" -->"><!-- TMPL_VAR Name="borrowernumber" --></a>
@@ -116,7 +116,7 @@
         <table>
             <caption>Transfer</caption>
             <tr>
-                <th scope="row">Destination branch:</th>
+                <th scope="row">Destination library:</th>
                 <td>
                     <select name="tobranchcd">
                         <!-- TMPL_LOOP Name="branchoptionloop" -->
