--- a/koha-tmpl/intranet-tmpl/prog/en/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/selectbranchprinter.tmpl
@@ -1,16 +1,16 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Circulation &rsaquo; Set Branch</title>
+<title>Circulation &rsaquo; Set Library</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
 
-<h1>Circulation &rsaquo; Set Branch</h1>
+<h1>Circulation &rsaquo; Set Library</h1>
 
 <form method="post" action="/cgi-bin/koha/circ/circulation.pl">
 <!-- TMPL_VAR NAME="branch" -->
 
-<label for="branch">Choose branch:</label>
+<label for="branch">Choose library:</label>
 <!--branchselection-->
 	<select name="branch" id="branch">
 	<!-- TMPL_LOOP Name="branchloop" -->
