--- a/koha-tmpl/intranet-tmpl/prog/en/members/maninvoice.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/maninvoice.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Borrowers &rsaquo; Create Manual Invoice</title>
+<title>Koha &rsaquo; Patrons &rsaquo; Create Manual Invoice</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
