--- a/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/members/member.tmpl
@@ -1,11 +1,11 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Borrowers &rsaquo; Search Results</title>
+<title>Koha &rsaquo; Patrons &rsaquo; Search Results</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 
 <!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
-<a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Borrowers</a><!-- TMPL_IF NAME="searching" --> &rsaquo; <a>Search Results</a><!-- /TMPL_IF -->
+<a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">patrons</a><!-- TMPL_IF NAME="searching" --> &rsaquo; <a>Search Results</a><!-- /TMPL_IF -->
 
 <form name="f" action="/cgi-bin/koha/members/member.pl" method="post">
     <label for="member">Search by name or barcode:</label>
