--- a/koha-tmpl/intranet-tmpl/prog/en/reports/cat_issues_top.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/cat_issues_top.tmpl
@@ -19,7 +19,7 @@ function Dopop(link) {
 }
 </script>
 	<!-- TMPL_LOOP NAME="mainloop" -->
-		<h1>Top <!-- TMPL_VAR NAME="limit"--> List On Catalogue Issues </h1>
+		<h1>Top <!-- TMPL_VAR NAME="limit"--> List On Catalogue Checkout </h1>
 		<!-- TMPL_IF NAME="loopfilter"-->
 			<p>Filtered on</p>
 			<!-- TMPL_LOOP NAME="loopfilter" -->
@@ -38,7 +38,7 @@ function Dopop(link) {
 				<th>&nbsp;</th>
 				<!-- TMPL_LOOP NAME="loopcol" -->
 					<th>Item</th>
-					<th>Issues count</th>
+					<th>Count of Checkouts</th>
 				<!-- /TMPL_LOOP -->
 			</tr>
 				<!-- TMPL_LOOP NAME="looprow" -->
@@ -60,7 +60,7 @@ function Dopop(link) {
 		</table>
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
-	<h1>Top List On Catalogue Issues</h1>
+	<h1>Top List On Catalogue Checkouts</h1>
 	<form method="post">
 	
 	<table>
@@ -242,7 +242,7 @@ function Dopop(link) {
 			<tr class="hilighted">
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
-				<td>Borrower Category</td>
+				<td>Patron Category</td>
 				<td><input type="text" name="Filter" value="" /></td>
 			</tr>
 			<tr>
