--- a/koha-tmpl/intranet-tmpl/prog/en/reports/catalogue_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/catalogue_out.tmpl
@@ -13,7 +13,7 @@
 
 <!-- TMPL_IF NAME="do_it" -->
 	<!-- TMPL_LOOP NAME="mainloop" -->
-		<h1>Items with no issues</h1>
+		<h1>Items with no checkouts</h1>
 		<!-- TMPL_IF NAME="loopfilter"-->
 			<p>Filtered on</p>
 			<!-- TMPL_LOOP NAME="loopfilter" -->
