--- a/koha-tmpl/intranet-tmpl/prog/en/reports/issues_avg_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/issues_avg_stats.tmpl
@@ -13,7 +13,7 @@
 
 <!-- TMPL_IF NAME="do_it" -->
 	<!-- TMPL_LOOP NAME="mainloop" -->
-		<h1>Issues Average Period statistics </h1>
+		<h1>Checkouts Average Period statistics </h1>
 		<!-- TMPL_IF NAME="loopfilter"-->
 			<p>Filtered on</p>
 			<!-- TMPL_LOOP NAME="loopfilter" -->
@@ -55,7 +55,7 @@
 		</table>
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
-	<h1>Koha : Issues Average Period statistics </h1>
+	<h1>Koha : Checkouts Average Period statistics </h1>
 	<form method="post">
 	<table>
 		<thead>
