--- a/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/reports/reports-home.tmpl
@@ -17,7 +17,7 @@
 	<h2>Statistics wizards</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/acquisitions_stats.pl">Acquisitions</a></li>
-		<li><a href="/cgi-bin/koha/reports/borrowers_stats.pl">Borrowers</a></li>
+		<li><a href="/cgi-bin/koha/reports/borrowers_stats.pl">Patrons</a></li>
 		<li><a href="/cgi-bin/koha/reports/catalogue_stats.pl">Catalogue</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_stats.pl">Circulation</a></li>
 	</ul>
@@ -25,13 +25,13 @@
 
 	<h2>Top Lists</h2>
 	<ul>
-		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Most issuing borrowers</a></li>
-		<li><a href="/cgi-bin/koha/reports/cat_issues_top.pl">Most issued items</a></li>
+		<li><a href="/cgi-bin/koha/reports/bor_issues_top.pl">Patrons checking out the most</a></li>
+		<li><a href="/cgi-bin/koha/reports/cat_issues_top.pl">Items checked out the most</a></li>
 	</ul>
 	<h2>Inactive</h2>
 	<ul>
-		<li><a href="/cgi-bin/koha/reports/borrowers_out.pl">Borrowers without issues</a></li>
-		<li><a href="/cgi-bin/koha/reports/catalogue_out.pl">Items not issued</a></li>
+		<li><a href="/cgi-bin/koha/reports/borrowers_out.pl">Patrons who haven't checked out</a></li>
+		<li><a href="/cgi-bin/koha/reports/catalogue_out.pl">Items not checked out</a></li>
 	</ul>
 
 
@@ -40,7 +40,7 @@
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=itemtypes">Catalogue by itemtype</a></li>
 	</ul>
 	<ul>
-		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Issues by borrower category</a></li>
+		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Checkouts by patron category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
 	</ul>
 
